--- a/templates/main/welcome.html.tt
+++ b/templates/main/welcome.html.tt
@@ -1,120 +1,5 @@
-[% h.layout_var( 'meta_title', 'АнализМаркет - все анализы с ценами на одной карте, поиск лабораторий, отзывы' ) %]
-[% h.layout_var( 'meta_desc', 'На сайте «АнализМаркет» собрана информация обо всех анализах, которые можно сделать в лабораториях России, Украины, Казахстана и Белоруссии. Вы можете посмотреть, где располагаются ближайшие пункты забора анализов и в какую сумму обойдется обследование.' ) %]
+[% h.layout_var( 'meta_title', 'MargaritaCMS - прогрессивная, инновационная система управления контентом' ) %]
+[% h.layout_var( 'meta_desc', 'На сайте MargaritaCMS собрана информация о установке, обновлению и использованию MargaritaCMS. А так же вы сможете ознакомиться со всеми плагинами и описаниям к ним.') %]
 <div class="main_vitr">
-	<div class="search_punkts">
-		<div class="easy_steps">Диагностика за три простых шага</div>
-		<div class="steps">
-			<a href="/tests/" class="est_h">1<span>Выберите анализ</span></a>
-			<div class="hover_popup"><span>Шаг 1</span>Около 2000 лабораторных исследований, десятки комплексных панелей.</div>
-			<div class="fstep">Выберите анализ</div>
-		</div>
-		<div class="steps">
-			<a href="/tests/" class="est_h">2<span>Сравните цены</span></a>
-			<div class="hover_popup"><span>Шаг 2</span>Все цены на выбранные исследования в ближайших к вам пунктах забора.</div>
-			<div class="sstep">Сравните цены</div>
-		</div>
-		<div class="steps last_s">
-			<a href="/labs/" class="est_h">3<span>Выберите лабораторию</span></a>
-			<div class="hover_popup"><span>Шаг 3</span>600 пунктов забора анализов на карте России, Белоруссии, Казахстана и Украины.</div>
-			<div class="tstep">Выберите лабораторию</div>
-		</div>
-		<div class="clear"></div>
-		<div class="vitr_searchf">
-			<b>Найдите нужный <span id="analises" class="sel_a">анализ</span> или <span id="reserch" class="sel_n">исследование</span></b>
-			<form id="mform" method="GET" action="/tests/"><div class="form_search"><div class="f_search_r"><div class="f_search_c morda_input"><input data-type="test" id="main_s" autocomplete="off" name="term" type="text" /></div></div></div><input class="input_submit" type="submit" value="Найти" /></form>
-			[% FOREACH collection = collection %]
-				[% len = collection.real_name.length %]
-				[% IF len > 33 %]
-					<span class="qlike" id="ex_test">Например: <a href="#">[% collection.real_name.substr(34, len, '...') %]</a></span>
-				[% ELSE %]
-					<span class="qlike" id="ex_test">Например: <a href="#">[% collection.real_name %]</a></span>
-				[% END %]
-			[% END %]
-			[% FOREACH collection = diagnostic %]
-				[% len = collection.name.length %]
-				[% IF len > 33 %]
-					<span class="qlike" id="ex_diag">Например: <a href="#">[% collection.name.substr(34, len, '...') %]</a></span>
-				[% ELSE %]
-					<span class="qlike" id="ex_diag">Например: <a href="#">[% collection.name %]</a></span>
-				[% END %]
-			[% END %]
-			<div id="ls"></div>
-		</div>
-	</div>
-	<div class="m_map">
-		<div class="iphone">
-			<!--<i class="ios_ico"></i><span><a href="#">Приложения для iOS</a></span><i class="andr_ico"></i><span class="lspan"><a href="#">Приложение для Android</a></span>-->
-			<strong>Лабораторий на карте: &nbsp;[% FOREACH digit IN ucnt.split('') %]<em>[% digit %]</em>[% END %] <a href="/main/review" class="top_review">Оставить отзыв</a></strong>
-		</div>
-		<div class="yamps">
-			<div id="YMapsID"></div>
-		</div>
-	</div>
-</div>
-<div class="morda_content">
-	<div class="panels_and_news">
-		<div class="panels_promo">
-			<div class="p_titles">Панели тестов</div>
-			<div class="test_control">
-				<ul>
-					<li class="act_li"></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-				<div class="panel_p pan_right">
-					<div class="panel_p_right">
-						<div class="panel_p_a"><a href="/panels/">Все панели</a></div>
-						<div class="panel_p_s"></div>
-						<div class="panel_p_n"><a href="/panels/">[% cnt %]</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="slide_div">
-				[% FOREACH pa = panel %]
-					<div class="panel_item">
-						[% counts = h.image_for_object('panels',pa.id,'min') %]
-						<img class="p_img" src="/panels/[% counts.name %]" alt="[% pa.name %]" />
-						<div class="pan_txt">
-							<div class="p_who">
-								<a href="/panels/id/[% pa.id %]">[% pa.name %]</a>
-							</div>
-						</div>
-					</div>
-				[% END %]
-			</div>
-		</div>
-		<div class="main_news">
-			<!--<h2>Новости</h2>-->
-			[% FOREACH at = article %]
-				<div class="news_item">
-					<a class="n_title" href="/article/id/[% at.id %]/">[% at.name %]</a>
-					<span class="lid">[% at.annotation %]</span>
-				</div>
-			[% END %]
-			<div class="clear"></div>
-			<a href="/article/" class="read_all_a">Все статьи</a>
-			<div class="clear"></div>
-			<div class="soc_wtf">
-				<div class="fb-like" data-send="false" data-width="245" data-show-faces="false" data-font="tahoma" style="float:left"></div>
-				<div id="vk_like" style="width:245px;float:left;clear:none !important"></div> 
-				<script type="text/javascript">VK.Widgets.Like("vk_like", {type: "full"});</script>
-			</div>
-		</div>
-	</div>
-	<div class="anali_and_labs">
-		<div class="analizes">
-			<h2>Популярные анализы</h2>
-			[% FOREACH pop_u = pop_unit %]
-				<div class="list_ana"><a href="/tests/id/[% pop_u.collection.id %]/">[% pop_u.collection.real_name %]</a><i class="eas"></i></div>
-			[% END %]
-		</div>
-		<div class="p_labs">
-			<h2>Популярные лаборатории</h2>
-			[% FOREACH pop_l = pop_lab %]
-				<div class="list_labs"><a href="/network/id/[% pop_l.id %]">[% pop_l.name %]</a><i class="eas"></i></div>
-			[% END %]
-		</div>
-	</div>
 </div>
 <div class="clear"></div>
