--- a/templates/layouts/user_default.html.tt
+++ b/templates/layouts/user_default.html.tt
@@ -1,7 +1,141 @@
-[% PROCESS ".blocks/layouts" %]
-[% PROCESS header %]
-[% IF h.config_site.ya_verification %]<meta name='yandex-verification' content='[% h.config_site.ya_verification %]' />[% END %]
-<body>
+[% PROCESS ".blocks/user_default/layouts" %]
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title>[% h.layout_var( 'meta_title' ) %] - [% h.config_site.name %]</title>
+		<meta name="description" content="[% h.layout_var( 'meta_desc' ) %]">
+		[% IF h.exist_layout_var( 'keys' ) %]<meta name="keywords" content="[% h.layout_var( 'keys' ) %]" />[% END %]
+		<meta property="og:title" content="[% h.config_site.name %]"/>
+		<meta property="og:image" content="[% c.tx.req.url.base.scheme _ "://" _ c.tx.req.url.base.host %]/img/logo.gif"/>
+		<meta property="og:site_name" content="[% h.config_site.name %]"/>
+		<meta property="og:description" content="На сайте «[% h.config_site.name %]» [% h.config_site.description %]"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita.css?[% h.mtime_static.css %]" />
+		<link type="image/x-icon" rel="shortcut icon" href="/favicon.ico" />
+		<script src="/js/user_default/jq.common.js?[% h.mtime_static.js %]" type="text/javascript"></script>
+		<!--[if lte IE 7]><link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita-ie.css?[% h.mtime_static.css %]" /><![endif]-->
+		<!--[if IE 8]><link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita-ie8.css?[% h.mtime_static.css %]" /><![endif]-->
+		[% IF h.config_site.ya_verification %]<meta name='yandex-verification' content='[% h.config_site.ya_verification %]' />[% END %]
+	</head>
+	<body>[% USE date %]
+		<div id="container" class="n_container">
+			<div id="header">
+				<div class="wrap">
+					<div class="logo"></div>
+					<div class="date">[% date.format(date.now, '%A, %e %B %Y', locale => 'ru_RU.UTF-8') %]</div>
+					<div class="social">
+						<ul>
+							[% IF h.config_site.twitter_enabled %]<li><a href="[% h.config_site.twitter_link %]"><img src="/img/user_default/twitter.png" /></a></li>[% END %]
+							[% IF h.config_site.facebook_enabled %]<li><a href="[% h.config_site.facebook_link %]"><img src="/img/user_default/facebook.png" /></a></li>[% END %]
+							[% IF h.config_site.gplus_enabled %]<li><a href="[% h.config_site.gplus_link %]"><img src="/img/user_default/gplus.png" /></a></li>[% END %]
+						</ul>
+					</div>
+				</dir>
+				<div id="menu">
+					<ul id="main-menu" class="menu">
+						<li class="menu-item"><a href="/"><img src="/img/user_default/home.png" /></a></li>
+						[% FOREACH item = h.menu_items( 'top' ) %]
+							<li class="menu-item"><a href="/[% item.page.controller %]/[% item.page.action %]">[% item.name %]</a></li>
+						[% END %]
+					</ul>
+				</div>
+				<div class="clearpos"></div>
+			</div>
+			<div id="main">
+				[% h.content %]
+			</div>
+			<div id="right-sidebar" class="sidebar">
+				<div class="wrap">
+					[% IF h.config_site.facebook_enabled %]
+					<div class="facebook">
+						<div class="icon"><img src="/img/user_default/fb32_1.png" /></div>
+						<div class="cont">
+							<a target="_blank" href="[% h.config_site.facebook_link %]">12345</a>
+						</div>
+						<div class="text">Likes</div>
+					</div>
+					[% END %]
+					[% IF h.config_site.twitter_enabled %]
+					<div class="twitter">
+						<div class="icon"><img src="/img/user_default/twitter32_1.png" /></div>
+						<div class="cont">
+							<a target="_blank" href="[% h.config_site.twitter_link %]">12345</a>
+						</div>
+						<div class="text">Likes</div>
+					</div>
+					[% END %]
+				</div>
+				<div id="contact" class="widget">
+					<h3>Обратная связь</h3>
+					<form action="" id="form" method="post">
+						<div class="field">
+							<label for="sender_name">Имя</label>
+							<input type="text" class="text" name="sender_name" id="sender_name" />
+						</div>
+						<div class="field">
+							<label for="sender_email">Email</label>
+							<input type="text" class="text" name="sender_email" id="sender_email" />
+						</div>
+						<div class="field">
+							<label for="sender_name">Сообщение</label>
+							<textarea class="textarea" name="message_text"></textarea>
+						</div>
+						<div class="field">
+							<input type="submit" class="input_submit" value="Отправить" />
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="clearpos"></div>
+			<div id="footer">
+				<div class="cpyright">
+					© «[% h.config_site.name %]», [% h.config_site.install_year;
+					IF date.format( date.now, '%Y' ) != h.config_site.install_year %]-[% date.format( date.now, '%Y' ) %] г.[% END; 
+					IF h.config_site.phone %][% h.config_site.phone %]. [% END;
+					IF h.config_site.info_email %][% h.config_site.info_email %].[% END;
+					IF h.config_site.orphus_enabled %]
+						<div class="orphus">
+							<a href="http://orphus.ru" rel="nofollow" id="orphus" target="_blank">
+								<img alt="Система Orphus" src="/img/user_default/orphus.gif" border="0" width="95" height="15" style="margin-left:20px;" />
+							</a>
+						</div>
+					[% END %]
+				</div>
+				<div style="position:absolute;left:-7000px">
+					[% h.config_site.counter_code_footer %]
+					[% IF h.config_site.orphus_enabled %]<script type="text/javascript" src="/js/orphus.js?[% h.mtime_static.js %]"></script>[% END %]
+					[% IF h.config_site.copiny_enabled %]
+						<script type="text/javascript" charset="utf-8">
+							var proto = (document.location.protocol=='https:')?'https:':'http:';
+							var host = proto+'//widget.copiny.com';
+							document.write(unescape("%3Cscript src='" + host + "/static/js/widget.js?[% h.mtime_static.js %]' type='text/javascript'%3E%3C/script%3E"));
+						</script>
+						<script type="text/javascript" charset="utf-8">
+							var copinyWidgetOptions = {
+							position: '[% h.config_site.copiny_position %]',
+							hostcommunity:'[% h.config_site.copiny_host %]',
+							newwindow: '0',
+							type: 'question',
+							color: '[% h.config_site.copiny_color %]',
+							border: '[% h.config_site.copiny_border %]',
+							round: '1',
+							title: "[% h.config_site.copiny_title %]",
+							cache: "[% h.config_site.copiny_cache %]",
+							community:[% h.config_site.copiny_community %]
+							};
+							initCopinyWidget(copinyWidgetOptions);
+							CopinyWidget.showTab();
+						</script>
+					[% END %]
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
+
+[% IF 0 %]
+
 [% IF h.config_site.facebook_enabled %]
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
@@ -55,5 +189,4 @@
 	[% IF h.config_site.sharethis_enabled %]
 	<script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=[% h.config_site.sharethis_pubid %]"></script>
 	[% END %]
-</body>
-</html>
+[% END #IF0 %]
