--- a/templates/auth/lostpassword.html.tt
+++ b/templates/auth/lostpassword.html.tt
@@ -1,10 +1,13 @@
-[% h.layout_var( 'meta_title', 'АнализМаркет - восстановление пароля' ) %]
+[% h.layout_var( 'meta_title', 'Восстановление пароля' ) %]
 [% h.layout_var( 'meta_desc', ' ') %]
 [% PROCESS ".blocks/main" %]
 
 <div class="analiz_content auth_form">
 <div class="auth_body">
 <h1>Восстановление пароля</h1>
+[% IF error %]
+	<span class="logm_err">Такой Email отсутствует в нашей базе. <a href="/auth/register/">Зарегистрироваться?</a></span>
+[% END %]
 <form method="POST">
 <input type="hidden" name="back_url" value="[% back_url %]">
 <div class="ermail" style="width:500px;">Введите адрес, который вы указали при регистрации.</div>
