--- a/templates/layouts/user_default.html.tt
+++ b/templates/layouts/user_default.html.tt
@@ -15,6 +15,9 @@
 		<link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita.css?[% h.mtime_static.css %]" />
 		<link type="image/x-icon" rel="shortcut icon" href="/favicon.ico" />
 		<script src="/js/user_default/jq.common.js?[% h.mtime_static.js %]" type="text/javascript"></script>
+		[% IF h.config_site.addthis_id %]
+			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
+		[% END %]
 		<!--[if lte IE 7]><link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita-ie.css?[% h.mtime_static.css %]" /><![endif]-->
 		<!--[if IE 8]><link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita-ie8.css?[% h.mtime_static.css %]" /><![endif]-->
 		[% IF h.config_site.ya_verification %]<meta name='yandex-verification' content='[% h.config_site.ya_verification %]' />[% END %]
@@ -22,8 +25,15 @@
 	<body>[% USE date %]
 		<script>
 			$(document).ready( function(){
+			[% IF h.config_site.vk_username %]
 				VK.init({ apiId: 3666702 });
 				VK.Api.call('groups.getById',{gid: '[% h.config_site.vk_username %]', fields: "members_count"}, function(data) {if (data.response) {document.getElementById('gr_members_vk').innerHTML = data.response[0].members_count}});
+			[% END %]
+			[% IF h.config_site.addthis_id %]
+				var addthis_config = {
+				     pubid: [% h.config_site.addthis_id %]
+					 };
+			[% END %]
 			});
 		</script>
 		<div id="container" class="n_container">
