--- a/public/css/user_default/margarita.css
+++ b/public/css/user_default/margarita.css
@@ -77,7 +77,7 @@ a:link {
 }
 
 .vk {
-	background: #4E729A;
+	background: #3C668E;
 	margin-right: 16px;
 }
 
@@ -134,7 +134,7 @@ a:link {
 	display: block;
 	font-size: 18px;
 	font-weight: 600;
-	line-height: 22px;
+	line-height: 24px;
 	padding: 18px 22px;
 	text-align: center;
 }
@@ -143,7 +143,7 @@ a:link {
 	text-decoration: none;
 }
 
-#menu a:hover {
+#menu a:hover, #menu .active{
 	background: #359BED;
 }
 
