--- a/templates/layouts/user_default.html.tt
+++ b/templates/layouts/user_default.html.tt
@@ -11,7 +11,9 @@
 		<meta property="og:description" content="На сайте «[% h.config_site.name %]» [% h.config_site.description %]"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+		[% IF h.config_site.vk_username %]
 		<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript"></script>
+		[% END %]
 		<link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita.css?[% h.mtime_static.css %]" />
 		<link type="image/x-icon" rel="shortcut icon" href="/favicon.ico" />
 		<script src="/js/user_default/jq.common.js?[% h.mtime_static.js %]" type="text/javascript"></script>
@@ -45,16 +47,16 @@
 						<ul>
 							[% IF h.config_site.twitter_username %][% tw = h.get_twitter_data %]<li><a href="https://twitter.com/[% tw.screen_name %]"><img src="/img/user_default/twitter.png" /></a></li>[% END %]
 							[% IF h.config_site.facebook_username %][% fb = h.get_facebook_data %]<li><a target="facebook" href="[% fb.link %]"><img src="/img/user_default/facebook.png" /></a></li>[% END %]
-							[% IF h.config_site.vk_username %]<li><a target="vk" href="http://vk.com/club[% h.config.vk_username %]"><img src="/img/user_default/vk.png" /></a></li>[% END %]
+							[% IF h.config_site.vk_username %]<li><a target="vk" href="http://vk.com/club[% h.config_site.vk_username %]"><img src="/img/user_default/vk.png" /></a></li>[% END %]
 							[% IF h.config_site.gplus_enabled %]<li><a href="[% h.config_site.gplus_link %]"><img src="/img/user_default/gplus.png" /></a></li>[% END %]
 						</ul>
 					</div>
 				</div>
 				<div id="menu">
 					<ul id="main-menu" class="menu">
-						<li class="menu-item"><a href="/"><img src="/img/user_default/home.png" /></a></li>
+						<li class="menu-item"><a href="/" class="[% IF controller == 'main' && action == 'welcome' %]active[% END %]"><img src="/img/user_default/home.png" /></a></li>
 						[% FOREACH item = h.menu_items( 'top' ) %]
-							<li class="menu-item"><a href="/[% item.page.controller %]/[% item.page.action %]">[% item.name %]</a></li>
+							<li class="menu-item"><a class="[% IF item.page.controller == controller && item.page.action == action %]active[% END %]" href="/[% item.page.controller %]/[% item.page.action %]">[% item.name %]</a></li>
 						[% END %]
 					</ul>
 				</div>
